# soc-credit-bot-rs

./: .gitignore  Cargo.toml
src/: main.rs
