[package]
name = "soc-credit-bot-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# grammers-client = "0.4.0"
grammers-client = { git = "https://github.com/zawodskoj/grammers" }
grammers-session = { git = "https://github.com/zawodskoj/grammers" }
grammers-tl-types = { git = "https://github.com/zawodskoj/grammers" }
futures-util = "0.3.21"
tokio = { version = "1.20.1", features = ["signal"] }
simple_logger = "2.2.0"
log = "0.4.17"
skia-safe = { git = "https://github.com/rust-skia/rust-skia", features = ["webp"] }